--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Seafaring life -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Captain Kyd; or, The Wizard of the Sea. Vol. II
 url: http://www.gutenberg.org/ebooks/35810
